@@ -32,6 +32,8 @@ package lu.fisch.structorizer.parsers;
  *      Author          Date            Description
  *      ------          ----            -----------
  *      Kay Gürtzig     2019-09-13      First Issue (for #746)
+ *      Kay Gürtzig     2022-05-08      Issue #1034: default text prefixes eliminated or replaced,
+ *                                      correct handling of default branches in CASE structures
  *
  ******************************************************************************************************
  *
@@ -66,6 +68,7 @@ import lu.fisch.structorizer.elements.Repeat;
 import lu.fisch.structorizer.elements.Root;
 import lu.fisch.structorizer.elements.Subqueue;
 import lu.fisch.structorizer.elements.While;
+import lu.fisch.structorizer.io.Ini;
 import lu.fisch.utils.StringList;
 
 /**
@@ -74,6 +77,17 @@ import lu.fisch.utils.StringList;
  */
 public class StgrImporter implements INSDImporter {
 
+	// START KGU#1029 2022-05-08: Issue #1034
+	private static final StringList DEFAULT_PREFIXES_INSTR = StringList.explode("Instruction:,Anweisung:", ",");
+	private static final StringList DEFAULT_PREFIXES_ALT = StringList.explode("If ,Ist ", ",");
+	private static final StringList DEFAULT_PREFIXES_CASE = StringList.explode("In the case of ,Im Fall von ", ",");
+	private static final StringList DEFAULT_PREFIXES_WHILE = StringList.getNew("While ");
+	private static final StringList DEFAULT_PREFIXES_REPEAT = StringList.getNew("Until ");
+	private static final StringList STANDARD_DEFAULT_CASE_LABELS = StringList.explode("Else,Sonst", ",");
+	private boolean insertPrefixes = false;
+	private boolean removePrefixes = false;
+	// END KGU#1029 2022-05-08
+	
 	private Color elementColor = Color.WHITE;
 	public static final Logger logger = Logger.getLogger(NSDParser.class.getName());
 	
@@ -81,6 +95,10 @@ public class StgrImporter implements INSDImporter {
 	 * Just creates a new importer for hus-Struktogrammer files
 	 */
 	public StgrImporter() {
+		// START KGU#1029 2022-05-08: Issue #1034
+		removePrefixes = Ini.getInstance().getProperty("impRefactorOnLoading", "false").equals("true");
+		insertPrefixes = Ini.getInstance().getProperty("impOptKeywords", "false").equals("true");
+		// END KGU#1029 2022-05-08
 	}
 
 	@Override
@@ -186,21 +204,42 @@ public class StgrImporter implements INSDImporter {
 			StringList text = readText(is);
 			switch (code[0]) {
 			case 0x10:
+				// START KGU#1029 2022-05-08: Issue #1034
+				refactorText(text, DEFAULT_PREFIXES_INSTR, null);
+				// END KGU#1029 2022-05-08
 				el = new Instruction(text);
 				break;
 			case 0x11:
 				el = new Call(text);
 				break;
 			case 0x20:
+				// START KGU#1029 2022-05-08: Issue #1034
+				refactorText(text, DEFAULT_PREFIXES_ALT, "preAlt");
+				if (removePrefixes) {
+					String lastLine = text.get(text.count()-1);
+					if (lastLine.endsWith("?")) {
+						text.set(text.count()-1, lastLine.substring(0, lastLine.length()-1));
+					}
+				}
+				// END KGU#1029 2022-05-08
 				el = readAlternative(is, text);
 				break;
 			case 0x21:
+				// START KGU#1029 2022-05-08: Issue #1034
+				refactorText(text, DEFAULT_PREFIXES_CASE, "preCase");
+				// END KGU#1029 2022-05-08
 				el = readCase(is, text);
 				break;
 			case 0x30:
+				// START KGU#1029 2022-05-08: Issue #1034
+				refactorText(text, DEFAULT_PREFIXES_REPEAT, "preRepeat");
+				// END KGU#1029 2022-05-08
 				el = readRepeat(is, text);
 				break;
 			case 0x31:
+				// START KGU#1029 2022-05-08: Issue #1034
+				refactorText(text, DEFAULT_PREFIXES_WHILE, "preWhile");
+				// END KGU#1029 2022-05-08
 				el = readWhile(is, text);
 				break;
 			}
@@ -210,6 +249,43 @@ public class StgrImporter implements INSDImporter {
 			}
 		}
 	}
+
+	// START KGU#1029 2022-05-08: Issue #1034
+	/**
+	 * @param text - the multi-line element text to be refactored - will be modified
+	 *     in place!
+	 * @param defaultPrefixes - a StringList of possible default prefixes in
+	 *     hus-Struktogrammer for this element kind
+	 * @param key - a parser preference key for this kind of element (if {@code null}
+	 *     then no insertion will take place but all lines will be processed, otherwise
+	 *     only the first line of {@code text} will be processed and a parser prefix
+	 *     (re)placement may be done if {@link #insertPrefixes} is {@code true} and a
+	 *     non-empty parser preference keyword is configured)
+	 */
+	private void refactorText(StringList text, StringList defaultPrefixes, String key) {
+		if (removePrefixes) {
+			String subst = "";
+			if (insertPrefixes && key != null) {
+				subst = CodeParser.getKeywordOrDefault(key, "");
+				if (!subst.isEmpty() && !subst.substring(subst.length()-1).isBlank()) {
+					subst += " ";
+				}
+			}
+			int jEnd = key == null ? 1 : text.count();
+			for (int j = 0; j < jEnd; j++) {
+				String line = text.get(j);
+				for (int i = 0; i < defaultPrefixes.count(); i++) {
+					String prefix = defaultPrefixes.get(i);
+					if (line.startsWith(prefix)) {
+						// prefix never contains special regex characters, so it's ok
+						text.set(j, line.replaceFirst(prefix, subst));
+						break;
+					}
+				}
+			}
+		}
+	}
+	// END KGU#1029 2022-05-08
 
 	private Element readAlternative(InputStream is, StringList text) throws IOException {
 		Alternative alt = new Alternative(text);
@@ -236,6 +312,15 @@ public class StgrImporter implements INSDImporter {
 				String sel = importBranch(is, cas.qs.get(i));
 				if (sel != null) {
 					cas.getText().set(ixCase + i, sel);
+					// START KGU#1029 2022-05-08: Issue #1034 Detect else branch
+					if (i + 1 == brCnt[0] && STANDARD_DEFAULT_CASE_LABELS.contains(sel)) {
+						// The last branch seams to mean a default branch, so drop the "%" line
+						content = cas.getText();
+						content.remove(content.count()-1);
+						// To save it back cares for the correct number of branches.
+						cas.setText(content);
+					}
+					// END KGU#1029 2022-05-08
 				}
 			}
 		}
